--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,8 +1,14 @@
 /** main.scss **/
 @import "susy";
+@import "breakpoint";
+
+$default: 340px;
+$full: 600px;
 
 body {
 	@include container(80em);
+
+	min-width: $default;
 }
 
 .vcard {
@@ -12,16 +18,26 @@ body {
 	margin-right: gutter();
 
 	.fn {
+		font-size: 1.75em;
 		@include span(3 of 3);
 		margin-bottom: 0.5em;
+
+		@include breakpoint($full) {
+			font-size: 2em;
+		}
 	}
 
 	.role {
-		@include span(2 of 3 first);
-		font-size: 1em;
+		font-size: 1.25em;
 		text-decoration: underline;
 		margin-top: 0;
 		margin-bottom: 1em;
+
+		@include span(3 of 3 first);
+
+		@include breakpoint($full) {
+			font-size: 1.5em;
+		}
 	}
 
 	.photo {
@@ -29,13 +45,19 @@ body {
 	}
 
 	p {
-		@include span(3 of 3);
+		font-size: 1.1em;
 		line-height: 1.3em;
+
+		@include span(3 of 3);
+		
+		@include breakpoint($full) {
+			@include span(2 of 3 last);
+			font-size: 1.5em;
+		}
 	}
 	p:first-of-type {
 		@include span(2 of 3 last);
 		margin-top: 0;
 		margin-bottom: 0.5em;
 	}
-
 }
