HTML errors fixed

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 <section class="vcard">
   <h1 class="fn">Boris Gordon</h1>
   <h2 class="role">Software engineer</h2>
-  <img class="photo" src="/images/boz-tilt.jpg" width="115px" />
+  <img class="photo" src="/images/boz-tilt.jpg" width="115" title="Avatar photo" alt="I like to use spooky, etherial avatar photos." />
   <p>Damn it, you've found me. I write software for a living and am currently located in <i class="adr"><span class="locality">Sydney</span>, <span class="country-name">Australia</span></i>.</p>
-  <p>You can contact me by email (at <a href="mailto:email@boris.com.au" class="email">boris.com.au</a>) or on twitter</a> and other places on the internet (<a href="http://twitter.com/boztek">@<span class="nickname">boztek</span></a>).</p>
+  <p>You can contact me by email (at <a href="mailto:email@boris.com.au" class="email">boris.com.au</a>) or on the internet as <a href="http://twitter.com/boztek">@<span class="nickname">boztek</span></a>.</p>
 </section>
