--- a/source/layout.erb
+++ b/source/layout.erb
@@ -4,16 +4,234 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+
     <title>Boris Gordon<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+
+    <style>
+      .wf-loading body {
+        visibility: hidden;
+      }
+
+      .wf-loading #squaresWaveG {
+        display: inline-block;
+        visibility: visible;
+      }
+      .wf-active #squaresWaveG {
+        visibility: hidden;
+      }
+      body {
+      	 padding: 0px 0 50px 0;
+      	 font-size: 17px;
+      	 min-height: 100%;
+      	 font-family:"Adelle Sans Regular", 'Helvetica Neue', Arial, Helvetica, sans-serif;
+      	 font-weight:normal;
+      	 font-style:normal;
+      }
+
+      #squaresWaveG{
+      position:relative;
+      width:240px;
+      height:29px}
+
+      .squaresWaveG{
+      position:absolute;
+      top:0;
+      background-color:#000000;
+      width:29px;
+      height:29px;
+      -moz-animation-name:bounce_squaresWaveG;
+      -moz-animation-duration:1.3s;
+      -moz-animation-iteration-count:infinite;
+      -moz-animation-direction:normal;
+      -webkit-animation-name:bounce_squaresWaveG;
+      -webkit-animation-duration:1.3s;
+      -webkit-animation-iteration-count:infinite;
+      -webkit-animation-direction:normal;
+      -ms-animation-name:bounce_squaresWaveG;
+      -ms-animation-duration:1.3s;
+      -ms-animation-iteration-count:infinite;
+      -ms-animation-direction:normal;
+      -o-animation-name:bounce_squaresWaveG;
+      -o-animation-duration:1.3s;
+      -o-animation-iteration-count:infinite;
+      -o-animation-direction:normal;
+      animation-name:bounce_squaresWaveG;
+      animation-duration:1.3s;
+      animation-iteration-count:infinite;
+      animation-direction:normal;
+      }
+
+      #squaresWaveG_1{
+      left:0;
+      -moz-animation-delay:0.52s;
+      -webkit-animation-delay:0.52s;
+      -ms-animation-delay:0.52s;
+      -o-animation-delay:0.52s;
+      animation-delay:0.52s;
+      }
+
+      #squaresWaveG_2{
+      left:30px;
+      -moz-animation-delay:0.65s;
+      -webkit-animation-delay:0.65s;
+      -ms-animation-delay:0.65s;
+      -o-animation-delay:0.65s;
+      animation-delay:0.65s;
+      }
+
+      #squaresWaveG_3{
+      left:60px;
+      -moz-animation-delay:0.78s;
+      -webkit-animation-delay:0.78s;
+      -ms-animation-delay:0.78s;
+      -o-animation-delay:0.78s;
+      animation-delay:0.78s;
+      }
+
+      #squaresWaveG_4{
+      left:90px;
+      -moz-animation-delay:0.91s;
+      -webkit-animation-delay:0.91s;
+      -ms-animation-delay:0.91s;
+      -o-animation-delay:0.91s;
+      animation-delay:0.91s;
+      }
+
+      #squaresWaveG_5{
+      left:120px;
+      -moz-animation-delay:1.04s;
+      -webkit-animation-delay:1.04s;
+      -ms-animation-delay:1.04s;
+      -o-animation-delay:1.04s;
+      animation-delay:1.04s;
+      }
+
+      #squaresWaveG_6{
+      left:150px;
+      -moz-animation-delay:1.17s;
+      -webkit-animation-delay:1.17s;
+      -ms-animation-delay:1.17s;
+      -o-animation-delay:1.17s;
+      animation-delay:1.17s;
+      }
+
+      #squaresWaveG_7{
+      left:180px;
+      -moz-animation-delay:1.3s;
+      -webkit-animation-delay:1.3s;
+      -ms-animation-delay:1.3s;
+      -o-animation-delay:1.3s;
+      animation-delay:1.3s;
+      }
+
+      #squaresWaveG_8{
+      left:210px;
+      -moz-animation-delay:1.43s;
+      -webkit-animation-delay:1.43s;
+      -ms-animation-delay:1.43s;
+      -o-animation-delay:1.43s;
+      animation-delay:1.43s;
+      }
+
+      @-moz-keyframes bounce_squaresWaveG{
+      0%{
+      background-color:#000000;
+      }
+
+      100%{
+      background-color:#FFFFFF;
+      }
+
+      }
+
+      @-webkit-keyframes bounce_squaresWaveG{
+      0%{
+      background-color:#000000;
+      }
+
+      100%{
+      background-color:#FFFFFF;
+      }
+
+      }
+
+      @-ms-keyframes bounce_squaresWaveG{
+      0%{
+      background-color:#000000;
+      }
+
+      100%{
+      background-color:#FFFFFF;
+      }
+
+      }
+
+      @-o-keyframes bounce_squaresWaveG{
+      0%{
+      background-color:#000000;
+      }
+
+      100%{
+      background-color:#FFFFFF;
+      }
+
+      }
+
+      @keyframes bounce_squaresWaveG{
+      0%{
+      background-color:#000000;
+      }
+
+      100%{
+      background-color:#FFFFFF;
+      }
+
+      }
+    </style>
+    <script type="text/javascript">
+      WebFontConfig = { fontdeck: { id: '54986' } };
+
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    </script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+
   </head>
   <body>
 
     <div id="main" role="main">
+      <div class="loader">
+        <div id="squaresWaveG">
+          <div id="squaresWaveG_1" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_2" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_3" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_4" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_5" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_6" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_7" class="squaresWaveG">
+          </div>
+          <div id="squaresWaveG_8" class="squaresWaveG">
+          </div>
+        </div>
+      </div>
       <%= yield %>
     </div>
 
     <%= google_analytics_tag %>
+
   </body>
 </html>
