--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,6 +1,8 @@
 /** main.scss **/
 @import "susy";
 @import "breakpoint";
+@import "code.css";
+@import "typography.css";
 
 $default: 340px;
 $full: 600px;
@@ -20,7 +22,6 @@ body {
 	.fn {
 		font-size: 1.75em;
 		@include span(3 of 3);
-		margin-bottom: 0.5em;
 
 		@include breakpoint($full) {
 			font-size: 2em;
@@ -49,7 +50,7 @@ body {
 		line-height: 1.3em;
 
 		@include span(3 of 3);
-		
+
 		@include breakpoint($full) {
 			@include span(2 of 3 last);
 			font-size: 1.5em;
