Loader fix; prod build minify

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -17,7 +17,8 @@
         display: inline-block;
         visibility: visible;
       }
-      .wf-active #squaresWaveG {
+      .wf-active #squaresWaveG,
+      .wf-inactive #squaresWaveG {
         visibility: hidden;
       }
       body {
