--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,6 @@
   <h1 class="fn">Boris Gordon</h1>
   <h2 class="role">Software engineer</h2>
   <img class="photo" src="/images/boz-tilt.jpg" width="115" title="Avatar photo" alt="I like to use spooky, etherial avatar photos." />
-  <p>Damn it, you've found me. I write software and am live and work in <i class="adr"><span class="locality">Sydney</span>, <span class="country-name">Australia</span></i>.</p>
+  <p>Damn it, you've found me. I write software, live and work in <i class="adr"><span class="locality">Sydney</span>, <span class="country-name">Australia</span></i>.</p>
   <p>You can contact me by email (at <script type="text/javascript">var a="email";var b="boris.com.au";document.write('<a href="mailto:'+a+'@'+b+'">'+a+'@'+b+'</a>');</script><noscript>email&nbsp;[at]&nbsp;boris&nbsp;[dot]&nbsp;com&nbsp;[dot]&nbsp;au</noscript>) or on the internet as <a href="http://twitter.com/boztek">@<span class="nickname">boztek</span></a>.</p>
 </section>
