--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -20,22 +20,25 @@ body {
 	margin-right: gutter();
 
 	.fn {
-		font-size: 1.75em;
 		@include span(3 of 3);
+		margin-bottom: 0;
 
+		font-family:"Assembler Regular", fantasy; font-weight:normal; font-style:normal;
+		font-size: 1.5em;
 		@include breakpoint($full) {
-			font-size: 2em;
+			font-size: 3em;
 		}
 	}
 
 	.role {
-		font-size: 1.25em;
-		text-decoration: underline;
+		@include span(3 of 3 first);
+
+		font-family:"Matrise Pro Regular", monospace; font-size-adjust:0.49; font-weight:normal; font-style:normal;
+		text-decoration: none;
 		margin-top: 0;
 		margin-bottom: 1em;
 
-		@include span(3 of 3 first);
-
+		font-size: 1.25em;
 		@include breakpoint($full) {
 			font-size: 1.5em;
 		}
