--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -13,6 +13,10 @@ body {
 	min-width: $default;
 }
 
+body[data-js="false"] .loader {
+	display: none;
+}
+
 .vcard {
 	@include span(80%);
 	margin-top: gutter();
@@ -23,7 +27,7 @@ body {
 		@include span(3 of 3);
 		margin-bottom: 0;
 
-		font-family:"Assembler Regular", fantasy; font-weight:normal; font-style:normal;
+		font-family:"Assembler Regular", sans-serif; font-weight:normal; font-style:normal;
 		font-size: 1.5em;
 		line-height: 1em;
 		@include breakpoint($full) {
